--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,7 +2,59 @@ site_name: hhhhala
 site_url: http://example.com/
 
 nav:
-  - Home: index.md
-  - About: about.md
-
-theme: readthedocs
+  - 学习笔记: 
+      - Django: 
+        - 项目文件夹文件说明: Study-notes/Django/file-description.md
+        - django-settings.py配置介绍: Study-notes/Django/django-settings.py.md
+        - django搭建: Study-notes/Django/django-build.md
+        - django orm 中创建关系表: Study-notes/Django/django-orm.md
+        - django路由层: Study-notes/Django/django-router.md
+        - django视图层: Study-notes/Django/django-view.md
+        - django模板层: Study-notes/Django/django-models.md
+        - django数据库的配置: Study-notes/Django/django-sqlos.md
+        - django数据库的操作: Study-notes/Django/django-sql.md
+  - 项目:
+      - 通用后台管理系统:
+        - Project/index.md
+theme: 
+  name: material
+  palette:
+    - scheme: default
+      primary: teal
+      accent: teal
+      toggle:
+        icon: material/brightness-7 
+        name: Switch to dark mode
+    - scheme: slate
+      primary: blue grey
+      accent: deep orange
+      toggle:
+        icon: material/lightbulb-outline 
+        name: Switch to dark mode
+  features:
+    - navigation.tabs
+    - navigation.indexes
+    - navigation.top
+    - content.action.edit
+    - content.action.view
+  language: zh # 一些提示性的文字会变成中文
+  icon:
+    edit: material/pencil 
+    view: material/eye
+    repo: fontawesome/brands/github
+edit_uri: edit/main/docs # 编辑按钮跳转的链接
+repo_url: https://github.com/hhhhala/hhhhala.github.io/ # 右上角点击跳转的链接
+repo_name: hhhhala.github.i # 右上角的名字
+## [bottom-left corner]
+copyright: hhhhala TS-1.0 # 左下角的版权声明
+extra:
+  social: # icons
+    - icon: fontawesome/brands/bilibili
+      link: https://space.bilibili.com/312701905
+      name: Bilibili | hhhhala- # 鼠标悬浮提示
+    - icon: fontawesome/brands/github
+      link: https://github.com/hhhhala
+      name: GitHub | hhhhala
+plugins:
+  - git-revision-date-localized:
+      enable_creation_date: true
